# tern

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  mise.toml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
content/: index.md  mechanika.md
