[project]
name = "tern"
version = "0.1.0"
description = "Narracyjna gra fabularna zbudowana na trójkach"
authors = [
    {name = "Radosław Ganczarek",email = "radoslaw@ganczarek.in"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
